# lucifer-quotes-sdk

./: AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  Makefile  README.md  SECURITY.md
.sdk/: package-lock.json  package.json
go/: AGENTS.md  CLAUDE.md  README.md  REFERENCE.md  go.mod  lucifer-quotes.go
go-cli/: .gitignore  Makefile  README.md  go.mod  main.go  words.go
go-mcp/: .gitignore  Makefile  README.md  go.mod  main.go  tools.go
lua/: AGENTS.md  CLAUDE.md  README.md  REFERENCE.md  config.lua  features.lua  lucifer-quotes.rockspec  lucifer-quotes_sdk.lua  lucifer-quotes_types.lua
php/: AGENTS.md  CLAUDE.md  README.md  (+5 more)
py/: AGENTS.md  CLAUDE.md  README.md  REFERENCE.md  config.py  features.py  luciferquotes_sdk.py  luciferquotes_types.py  pyproject.toml
py/core/: control.py  operation.py  utility_type.py
py/entity/: quote_entity.py
py/feature/: cache_feature.py  debug_feature.py  metrics_feature.py  netsim_feature.py  ratelimit_feature.py  rbac_feature.py  streaming_feature.py  telemetry_feature.py  test_feature.py  timeout_feature.py
py/test/: feature_harness.py  runner.py  test_exists.py  test_feature.py  test_netsim.py  test_pipeline.py  test_primary_utility.py  test_quote_direct.py  test_quote_entity.py  test_readme_examples.py
py/utility/: done.py  feature_init.py  make_error.py  make_options.py  make_point.py  make_response.py  make_result.py  make_spec.py  make_url.py  param.py  prepare_auth.py  prepare_body.py  prepare_headers.py  prepare_params.py  prepare_path.py  result_basic.py  result_body.py  transform_request.py  transform_response.py
(+402 files in other folders)
